objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SO_Retailer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Retailer Contact</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Retailer Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Preferred_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Pref. Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Priority_Position__c</fullName>
        <label>Priority Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Total_Enquiry_Age__c</fullName>
        <description>Calculates the Age of the Enquiry through to close of Opportunity.</description>
        <formula>IF( ISBLANK( CloseDate ) , TODAY(),  CloseDate ) - IF( ISBLANK( SO_Source_Enquiry__c ) ,   DATEVALUE(CreatedDate ) ,   DATEVALUE(SO_Source_Enquiry__r.CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Enquiry Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Build_Colour_Shade__c</fullName>
        <label>Build Colour Shade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Deposit_Percentage__c</fullName>
        <label>Deposit Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SO_Is_Classic_Service__c</fullName>
        <formula>RecordType.DeveloperName = &apos;SO_Service&apos; || (RecordType.DeveloperName = &apos;SO_Classic_Bespoke&apos; &amp;&amp; (ISPICKVAL(SO_Product_Offering__c,&apos;Bespoke&apos;) || ISPICKVAL(SO_Product_Offering__c,&apos;Services&apos;) || ISPICKVAL(SO_Product_Offering__c,&apos;Health Check&apos;)))</formula>
        <label>Is Classic Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Is_Secondary_owner__c</fullName>
        <description>Use for Secondary Opportunities</description>
        <formula>$User.Id == SO_secondary_owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Secondary owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Inbound_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Preferred_Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Preferred Retailer)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Actual_Contribution__c</fullName>
        <label>Actual Contribution (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Part_Exchange_Notes__c</fullName>
        <label>Part Exchange Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Pre_Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisional Order Form Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Pack Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Forecast_Build_Month__c</fullName>
        <formula>CASE(
  MONTH(  SO_Order__r.SO_ABS_Forecast__c ),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Build Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Originating_Division__c</fullName>
        <label>Originating Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Special_Operations_Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Build_Interior_Colour__c</fullName>
        <label>Build Interior Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Initial_Deposit_Value__c</fullName>
        <label>Initial Deposit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Model_with_Derivative__c</fullName>
        <formula>SO_Model__r.Name &amp; &quot; (&quot; &amp;  SO_Series_Name__r.Name  &amp;&quot;) &quot; &amp; SO_Derivative__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model with Derivative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_SSign_Envelope_Status__c</fullName>
        <label>S-Sign Envelope Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Additional_Revenue__c</fullName>
        <description>To display the total Revenue of additional vehicles for the opportunity</description>
        <label>Total Additional Vehicle Revenue (£)</label>
        <summarizedField>Additional_Vehicles__c.Revenue__c</summarizedField>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Additional_Vehicles__c</fullName>
        <label>No of Additional Vehicles</label>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Spec_Details__c</fullName>
        <label>Additional Spec Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Primary_Exterior_Colour__c</fullName>
        <label>Primary Exterior Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Primary_Exterior_Colour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Reference_number_prefix__c</fullName>
        <label>Reference number prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Reference_number_suffix__c</fullName>
        <label>Reference number suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Wait_List_Reminder_Date__c</fullName>
        <label>Wait List Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Created_Date__c</fullName>
        <label>Render Pack Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Additional_List_Price__c</fullName>
        <description>To display the total List price of additional vehicles for the opportunity</description>
        <label>Total Additional Vehicle List Price</label>
        <summarizedField>Additional_Vehicles__c.List_Price__c</summarizedField>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Paint_Requirements__c</fullName>
        <label>Bespoke Paint Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Includes_Scheduled_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a key field in Marketing Cloud journeys. It is used to establish if a customer has a scheduled service booked to prevent regular servicing marketing material.</description>
        <inlineHelpText>Is this service activity also expected to perform a scheduled service event?</inlineHelpText>
        <label>Includes Scheduled Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Restricted_Party_Screening__c</fullName>
        <label>Restricted Party Screening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unchecked</fullName>
                    <default>true</default>
                    <label>Unchecked</label>
                </value>
                <value>
                    <fullName>Customer Unknown/Check not Applicable</fullName>
                </value>
                <value>
                    <fullName>Check in progress</fullName>
                </value>
                <value>
                    <fullName>Potential match - defer to Group Compliance</fullName>
                </value>
                <value>
                    <fullName>Check cleared</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Additional_Contribution__c</fullName>
        <description>To display the total contribution of additional vehicles for the opportunity</description>
        <label>Total Additional Vehicle Contribution(£)</label>
        <summarizedField>Additional_Vehicles__c.Contribution__c</summarizedField>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Additional_Retail_Price__c</fullName>
        <description>To display the total Retail price of additional vehicles for the opportunity</description>
        <label>Total Additional Vehicle Retail Price</label>
        <summarizedField>Additional_Vehicles__c.Retail_Price__c</summarizedField>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Sent_to_Retailer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Pack Sent to Retailer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Exterior_Requirements__c</fullName>
        <label>Bespoke Exterior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Interior_Requirements__c</fullName>
        <label>Bespoke Interior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Contract_Signed_Reminder_Date__c</fullName>
        <label>Contract Signed Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Additional_Vehicle_Cost_Price__c</fullName>
        <description>To display the total Cost price of additional vehicles for the opportunity</description>
        <label>Total Additional Vehicle Cost Price (£)</label>
        <summarizedField>Additional_Vehicles__c.Cost_Price__c</summarizedField>
        <summaryForeignKey>Additional_Vehicles__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_Render_Pack_Sent_to_Retailer_Date__c</fullName>
        <label>Render Pack Sent to Retailer Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>SO_VIP</fullName>
        <active>true</active>
        <businessProcess>SO VIP Opportunity</businessProcess>
        <label>SVO Private Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Reborn</fullName>
        <active>true</active>
        <businessProcess>SO Classic Reborn</businessProcess>
        <label>Classic Reborn</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Bespoke</fullName>
        <active>true</active>
        <businessProcess>SO Bespoke Opportunity</businessProcess>
        <label>SVO Bespoke</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Service</fullName>
        <active>true</active>
        <businessProcess>SO Classic Service</businessProcess>
        <label>Classic Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Continuation</fullName>
        <active>true</active>
        <businessProcess>SO Classic Sales Waitlist</businessProcess>
        <label>Classic Continuation</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Works_Legends</fullName>
        <active>true</active>
        <businessProcess>SO Classic Works Legend</businessProcess>
        <label>Classic Works Legend</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Classic_Bespoke</fullName>
        <active>true</active>
        <businessProcess>SO Classic Bespoke</businessProcess>
        <label>Classic Bespoke</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Limited_Edition</fullName>
        <active>true</active>
        <businessProcess>SO Classic Sales Waitlist</businessProcess>
        <label>Classic Limited Edition</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Bespk_Cannot_skip_stages</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Bespoke&apos; &amp;&amp; 
((ISNEW() &amp;&amp; (ISPICKVAL(StageName,&quot;Contract Signed&quot;) || ISPICKVAL(StageName,&quot;Order Placed&quot;) || ISPICKVAL(StageName,&quot;Closed Won&quot;) || ISPICKVAL(StageName,&quot;Closed Lost&quot;))) || 
(ISPICKVAL(PRIORVALUE(StageName),&quot;Contract Signed&quot;) &amp;&amp; 
(ISPICKVAL(StageName,&quot;Design Brief &amp; Quote&quot;) || ISPICKVAL(StageName,&quot;Commission&quot;) || ISPICKVAL(StageName,&quot;Qualified&quot;))) || 
(ISPICKVAL(PRIORVALUE(StageName),&quot;Design Brief &amp; Quote&quot;) &amp;&amp; 
(ISPICKVAL(StageName,&quot;Order Placed&quot;) || ISPICKVAL(StageName,&quot;Closed Won&quot;))) || 
(ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;) &amp;&amp; 
(ISPICKVAL(StageName,&quot;Design Brief &amp; Quote&quot;) || ISPICKVAL(StageName,&quot;Commission&quot;) || ISPICKVAL(StageName,&quot;Qualified&quot;) || ISPICKVAL(StageName,&quot;Contract Signed&quot;))) ))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Sorry! you cannot skip stages or move backwards. Please follow the process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Production_Year_Validation</fullName>
        <active>true</active>
        <description>Check if year is within range of Model&apos;s year range; skips Continuation Programme Type</description>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; NOT(ISBLANK(SO_Production_Year__c )) &amp;&amp; NOT(ISPICKVAL(SO_Product_Offering__c,&apos;Continuation&apos;)) &amp;&amp; 
(NOT(LEN( SO_Production_Year__c ) == 4) || ISNUMBER(SO_Production_Year__c ) == FALSE ||
IF(NOT(ISBLANK(SO_Series_Name__c)),((NOT(ISBLANK(SO_Series_Name__r.SO_Model_Year_Start__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &lt; VALUE(SO_Series_Name__r.SO_Model_Year_Start__c)) ||
(NOT(ISBLANK(SO_Series_Name__r.SO_Model_Year_End__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &gt; VALUE(SO_Series_Name__r.SO_Model_Year_End__c ))),
IF(NOT(ISBLANK(SO_Model__c)),((NOT(ISBLANK(SO_Model__r.SO_Model_Year_Start__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &lt; VALUE(SO_Model__r.SO_Model_Year_Start__c)) ||
(NOT(ISBLANK(SO_Model__r.SO_Model_Year_End__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &gt; VALUE(SO_Model__r.SO_Model_Year_End__c ))),FALSE)))</errorConditionFormula>
        <errorDisplayField>SO_Production_Year__c</errorDisplayField>
        <errorMessage>Please enter a valid year within corresponding model&apos;s range.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_VIP_Mandate_Accepted_Quote</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_VIP&apos; &amp;&amp;
(ISPICKVAL(StageName,&quot;Verbal Commitment&quot;) || ISPICKVAL(StageName,&quot;Order Placed&quot;) || ISPICKVAL(StageName,&quot;Closed Won&quot;)) &amp;&amp;
( ISBLANK(Proceed_with_Quote__c) || NOT(ISPICKVAL(Proceed_with_Quote__r.SO_Outcome__c,&quot;Accepted&quot;)))</errorConditionFormula>
        <errorDisplayField>Proceed_with_Quote__c</errorDisplayField>
        <errorMessage>You should have an Accepted Quote to move to the selected Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Validate_Wait_List_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Continuation&apos; || RecordType.DeveloperName = &apos;SO_Limited_Edition&apos;) &amp;&amp; ISPICKVAL(StageName, &apos;Wait List&apos;) &amp;&amp; ISCHANGED(StageName) &amp;&amp; (ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Won&apos;) || ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Lost&apos;) || ISPICKVAL(PRIORVALUE(StageName),&apos;Order Placed&apos;)  )</errorConditionFormula>
        <errorMessage>Sorry! You cannot move back to Wait List.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_VIP_Mandate_Fields_from_Quote</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_VIP&apos; &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Quote&quot;) &amp;&amp; ISPICKVAL(StageName,&quot;Verbal Commitment&quot;) &amp;&amp; (ISBLANK( TEXT(Type) ) || ISBLANK(TEXT(SO_Retail_Price__c)))</errorConditionFormula>
        <errorMessage>Please enter Retail Price and Opportunity Type to proceed further</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Bespoke_Specs_Order_Placed</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_Classic_Bespoke&apos; &amp;&amp; 
ISCHANGED(StageName) &amp;&amp; (ISPICKVAL(StageName, &apos;Order Placed&apos;) || ISPICKVAL(StageName, &apos;Closed Won&apos;)) &amp;&amp; 
( ISBLANK( SO_Body_Style__c ) || (ISBLANK(  SO_Bespoke_Exterior_Requirements__c  ) &amp;&amp; ISBLANK(  SO_Bespoke_Interior_Requirements__c  ) &amp;&amp; ISBLANK(  SO_Bespoke_Paint_Requirements__c  )))</errorConditionFormula>
        <errorMessage>Please complete Body Style and at least one element of bespoke requirements section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Validate_Order_Placed_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>(BEGINS(RecordType.DeveloperName, &apos;SO_&apos;) &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SO_VIP&apos; &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SO_Bespoke&apos;) &amp;&amp; ISCHANGED(StageName) &amp;&amp; NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;)) &amp;&amp; NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)) &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;)</errorConditionFormula>
        <errorMessage>Sorry! You cannot move back once Order is placed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Gen_Force_Specs_Order_Placed</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Continuation&apos; || RecordType.DeveloperName = &apos;SO_Limited_Edition&apos; || RecordType.DeveloperName = &apos;SO_Reborn&apos; ) &amp;&amp; 
ISCHANGED(StageName) &amp;&amp; (ISPICKVAL(StageName, &apos;Order Placed&apos;) || ISPICKVAL(StageName, &apos;Closed Won&apos;)) &amp;&amp; 
( ISBLANK( SO_Body_Style__c ) || ISBLANK( SO_Build_Colour__c ) || ISBLANK( SO_Build_Colour_Shade__c ) || ISBLANK( SO_Build_Interior_Colour__c ) || ISBLANK(TEXT( SO_Hand_of_Drive__c )) || ISBLANK(TEXT( SO_Speedometer__c ) ) )</errorConditionFormula>
        <errorMessage>Please complete Body Style and all fields under Specification &amp; Options section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Generic_Cannot_reopen_closed_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; ((ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;) &amp;&amp; NOT(ISPICKVAL(StageName,&quot;Closed Won&quot;))) || (ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;) &amp;&amp; NOT(ISPICKVAL(StageName,&quot;Closed Lost&quot;))))</errorConditionFormula>
        <errorMessage>Cannot reopen Closed Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_VIP_Cannot_move_stage_back_order</fullName>
        <active>true</active>
        <description>Cannot move stage backwards once order is placed</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_VIP&apos; &amp;&amp; 
ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;) &amp;&amp; 
(ISPICKVAL(StageName,&quot;Verbal Commitment&quot;) || ISPICKVAL(StageName,&quot;Specification &amp; Quotation&quot;) || ISPICKVAL(StageName,&quot;Experience&quot;) || ISPICKVAL(StageName,&quot;Qualified&quot;))</errorConditionFormula>
        <errorMessage>Sorry! you cannot move stage backwards once order is placed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Bespk_Mandate_Pricing_Information</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_Bespoke&apos; &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Contract Signed&quot;) &amp;&amp; ISPICKVAL(StageName,&quot;Order Placed&quot;) &amp;&amp; (ISBLANK(SO_Retail_Price__c) || ISBLANK(SO_Revenue__c) || ISBLANK(SO_Contribution__c) || ISBLANK(SO_Cost_Price__c) || ISBLANK(SO_List_Price__c) )</errorConditionFormula>
        <errorMessage>Please complete Pricing Details section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Gen_Vehicle_field_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(SO_Vehicle__c) &amp;&amp; NOT(ISPICKVAL(StageName,&apos;Closed Lost&apos;)) &amp;&amp;
(((RecordType.DeveloperName = &apos;SO_Reborn&apos; || RecordType.DeveloperName = &apos;SO_Limited_Edition&apos; || RecordType.DeveloperName = &apos;SO_Classic_Bespoke&apos;) &amp;&amp; (ISPICKVAL(StageName,&apos;Order Placed&apos;) || ISPICKVAL(StageName,&apos;Closed Won&apos;)) ) || 
(RecordType.DeveloperName = &apos;SO_Works_Legends&apos; &amp;&amp; (ISPICKVAL(StageName, &apos;Contracting&apos;) || ISPICKVAL(StageName,&apos;Order Placed&apos;) || ISPICKVAL(StageName,&apos;Closed Won&apos;)) ) ||
((RecordType.DeveloperName = &apos;SO_Service&apos;)&amp;&amp; (ISPICKVAL(StageName, &apos;Contracting&apos;) || ISPICKVAL(StageName,&apos;Order Placed&apos;) || ISPICKVAL(StageName,&apos;Closed Won&apos;)) ) )</errorConditionFormula>
        <errorMessage>Please select a Vehicle to proceed further</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Generic_Validate_Account_Retailer</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Bespoke&apos; || RecordType.DeveloperName = &apos;SO_VIP&apos;) &amp;&amp; (
Account.RecordType.DeveloperName != &apos;SO_JLR_Account&apos; &amp;&amp; Account.RecordType.DeveloperName != &apos;RTC_Retailer_Account&apos; &amp;&amp; Account.RecordType.DeveloperName != &apos;SO_NSC_Importer&apos;)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select a Retailer, NSC/Importer or JLR Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Gen_Force_Pricing_Order_Placed</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Continuation&apos; || RecordType.DeveloperName = &apos;SO_Limited_Edition&apos; || RecordType.DeveloperName = &apos;SO_Reborn&apos; || RecordType.DeveloperName = &apos;SO_Works_Legends&apos; || RecordType.DeveloperName = &apos;SO_Service&apos; || RecordType.DeveloperName = &apos;SO_Classic_Bespoke&apos;) &amp;&amp;
(ISPICKVAL(StageName, &apos;Contracting&apos;) || ISPICKVAL(StageName, &apos;Contract Signed&apos;) || ISPICKVAL(StageName, &apos;Order Placed&apos;) || ISPICKVAL(StageName, &apos;Closed Won&apos;)) &amp;&amp;
(ISBLANK(SO_Retail_Price__c) || ISBLANK(TEXT(SO_VAT_Qualifying__c)) )</errorConditionFormula>
        <errorMessage>Please complete all fields under Pricing Details section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Generic_Order_Placed_to_Closed_Won</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(RecordType.DeveloperName, &apos;SO_&apos;) &amp;&amp; ISCHANGED(StageName) &amp;&amp; ( NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;Order Placed&quot;)) &amp;&amp; ISPICKVAL(StageName,&quot;Closed Won&quot;) )</errorConditionFormula>
        <errorMessage>You cannot move Opportunity to Closed Won skipping Order Placed Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Bespk_Mandate_Accepted_Quote_Design</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_Bespoke&apos; &amp;&amp; 
ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName,&quot;Contract Signed&quot;) &amp;&amp; 
( ISBLANK(Proceed_with_Quote__c) || NOT(ISPICKVAL(Proceed_with_Quote__r.SO_Outcome__c,&quot;Accepted&quot;)))</errorConditionFormula>
        <errorMessage>You must have an Accepted Proceed with Quote to move further</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Gen_Prevent_Return_to_Qualified</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName = &apos;SO_Reborn&apos; || RecordType.DeveloperName = &apos;SO_Works_Legend&apos;) &amp;&amp; NOT(ISNEW()) &amp;&amp;
ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, &apos;Qualified&apos;)</errorConditionFormula>
        <errorMessage>Sorry! You cannot move backwards to Qualified Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Cannot_go_back_from_Contract_Signed</fullName>
        <active>true</active>
        <errorConditionFormula>(BEGINS(RecordType.DeveloperName, &apos;SO_&apos;) &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SO_VIP&apos; &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SO_Bespoke&apos;) &amp;&amp;( ISPICKVAL( PRIORVALUE( StageName ) , &apos;Contract Signed&apos;) ||  ISPICKVAL( PRIORVALUE( StageName ) , &apos;Order Placed&apos;) ) &amp;&amp;   NOT(ISPICKVAL( StageName , &apos;Contract Signed&apos;) ) &amp;&amp; NOT(ISPICKVAL( StageName , &apos;Order Placed&apos;) ) &amp;&amp; NOT(ISPICKVAL( StageName , &apos;Closed Won&apos;) ) &amp;&amp; NOT(ISPICKVAL( StageName , &apos;Closed Lost&apos;) )</errorConditionFormula>
        <errorMessage>You cannot return to a previous opportunity stage once it has entered Contract Signed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_CLS_Party_Screening_bef_Order_Placed</fullName>
        <active>true</active>
        <errorConditionFormula>( BEGINS(RecordType.DeveloperName, &apos;SO_&apos;)  &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SO_VIP&apos;) &amp;&amp; NOT(ISPICKVAL(  SO_Restricted_Party_Screening__c , &apos;Check cleared&apos;)  ||  ISPICKVAL( SO_Restricted_Party_Screening__c , &apos;Customer Unknown/Check not Applicable&apos;) ) &amp;&amp; (ISPICKVAL( StageName , &apos;Contracting&apos;) || ISPICKVAL( StageName , &apos;Design Brief &amp; Quote&apos;)  ||  ISPICKVAL( StageName , &apos;Contract Signed&apos;) || ISPICKVAL( StageName , &apos;Order Placed&apos;) || ISPICKVAL( StageName , &apos;Closed Won&apos;))</errorConditionFormula>
        <errorDisplayField>SO_Restricted_Party_Screening__c</errorDisplayField>
        <errorMessage>You cannot start contracting without Restricted Party Screening being Cleared</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Generic_Enter_Lost_Reason_Closed_Lost</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(RecordType.DeveloperName, &apos;SO_&apos;) &amp;&amp;(ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName,&apos;Closed Lost&apos;) &amp;&amp; ISBLANK(TEXT(SO_Lost_Reason__c)))</errorConditionFormula>
        <errorMessage>Please enter Lost Reason before Closing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_VIP_Mandate_Fields_chek_specification</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SO_VIP&apos; &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;Qualified&quot;) &amp;&amp; ISPICKVAL(StageName,&quot;Specification &amp; Quotation&quot;) &amp;&amp; (ISBLANK( TEXT(SO_Originating_Division__c) ) || NOT(ISPICKVAL( SO_Restricted_Party_Screening__c,&apos;Check Cleared&apos;)))</errorConditionFormula>
        <errorMessage>The Restricted Party screening should be &apos;Check Cleared&apos; and Originating Division is required to proceed further</errorMessage>
    </validationRules>
</CustomObject>